Allow the static file controller to serve up all files.
Also moved the static files around to more closely match the layout
from the bootstrap examples, and demonstrate serving multiple folders.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 
     <title>Starter Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS
-    <link href="../../dist/css/bootstrap.css" rel="stylesheet">-->
+    <!-- Bootstrap core CSS-->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template
-    <link href="starter-template.css" rel="stylesheet">-->
+    <!-- Custom styles for this template-->
     <link href="/static/css/starter-template.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
