--- a/src/compiler/index.rs.html
+++ b/src/compiler/index.rs.html
@@ -1,3 +1,4 @@
+@model ~[Todo];
 @{
 use super::super::models::Todo;
 }
@@ -56,8 +57,14 @@ use super::super::models::Todo;
         </p>
         <span>What happens when I put @@LastName here?</span>
         <p>
-            My contact: test @@ example.com
+            My contact: test@@example.com
         </p>
+
+        <ul>
+            @for t in todos.iter() {
+            <li><a href="todos/@t.id/edit">@t.description</a></li>
+            }
+        </ul>
       </div>
 
     </div><!-- /.container -->
